--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "compile": "hardhat compile",
     "node": "hardhat node",
     "deploy": "hardhat run scripts/deploy.js --network localhost",
+    "deploy:v2": "hardhat run scripts/deploy-v2.js --network localhost",
     "interact": "hardhat run scripts/interact.js --network localhost",
     "test-arb": "hardhat run scripts/test-arbitrage.js --network localhost",
     "console": "hardhat console --network localhost",
